--- a/page-1.html
+++ b/page-1.html
@@ -54,7 +54,7 @@
 </header>  
 
 <!--  -->
-<section class="masthead">
+<section class="masthead hero-img">
     <div class="container">
         <h1 class="masthead-heading">Now A Preschool Franchise in New Delhi with 100% Guaranteed Success</h1>
         <a class="btn btn-primary btn-xl py-2 px-5 rounded-pill text-white fw-bold" href="#">Enquire Now</a>
