--- a/page-2.html
+++ b/page-2.html
@@ -428,36 +428,52 @@
                       </div>
                       <div class="item">
                         <div class="container">
-                            <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
+                            <img src="assets/logo/logo-05.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                         </div>
                         <div class="container">
-                            <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px"  class="img-fluid"/>
+                            <img src="assets/logo/logo-06.png" alt="Logo" height="100px" width="100px"  class="img-fluid"/>
                         </div>
                     </div>
                     <div class="item">
                         <div class="container">
-                            <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
+                            <img src="assets/logo/logo-07.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                         </div>
                         <div class="container">
-                            <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
+                            <img src="assets/logo/logo-08.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                         </div>
                     </div>
                     <div class="item">
                       <div class="container">
-                          <img src="assets/logo/logo-01.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
+                          <img src="assets/logo/logo-09.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                       </div>
                       <div class="container">
-                          <img src="assets/logo/logo-02.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
+                          <img src="assets/logo/logo-10.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                       </div>
                   </div>
                   <div class="item">
                       <div class="container">
-                          <img src="assets/logo/logo-03.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
+                          <img src="assets/logo/logo-11.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                       </div>
                       <div class="container">
-                          <img src="assets/logo/logo-04.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
+                          <img src="assets/logo/logo-12.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
                       </div>
                   </div>
+                  <div class="item">
+                    <div class="container">
+                        <img src="assets/logo/logo-13.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
+                    </div>
+                    <div class="container">
+                        <img src="assets/logo/logo-14.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
+                    </div>
+                </div>
+                <div class="item">
+                  <div class="container">
+                      <img src="assets/logo/logo-15.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
+                  </div>
+                  <div class="container">
+                      <img src="assets/logo/logo-16.png" alt="Logo" height="100px" width="100px" class="img-fluid" />
+                  </div>
+              </div>
                   </div>
               </div>
           </div>
