--- a/page-1.html
+++ b/page-1.html
@@ -101,9 +101,43 @@
 <section class="py-4 text-center">
     <div class="container">
         <h2 class="title-text mb-4 text-center">What Our Franchisees Say?</h2>
-        <div class="row">
+        <div class="row row-cols-2 row-cols-md-4 g-4">
           <div class="col">
-            <img src="assets/partners-speak.webp" alt="partners-speak" class="img-fluid">
+            <div class="card border-0 shadow h-100">
+              <img src="assets/owner-1.jpg" class="card-img-top" alt="SHAILJA ARVIND">
+              <div class="card-body px-2">
+                <h5 class="card-title main-title">SHAILJA ARVIND</h5>
+                <p class="card-text main-para text-start">Footprints is not only an opportunity for business, it is an opportunity to grow hand in hand As a franchise partner they provide all the necessary support and guide in right direction. We are proud to be a part of Footprints happy family and thanks the whole team for the support and guidance throughout</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow h-100">
+              <img src="assets/owner-2.jpg" class="card-img-top" alt="RUCHKI A SHARMA">
+              <div class="card-body px-2">
+                <h5 class="card-title main-title">RUCHKI A SHARMA</h5>
+                <p class="card-text main-para text-start">At Footprints I got everything served on a platter they helped me from finding a location and setting up the place as per footprints standards hiring and training of teachers For admissions we have parents partnership team. Footprints thought process of being transparent to the parents is the best thing Thank you Footprints for giving me this opportunity</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow h-100">
+              <img src="assets/owner-3.jpg" class="card-img-top" alt="SONIA SACHDE">
+              <div class="card-body px-2">
+                <h5 class="card-title main-title">SONIA SACHDE</h5>
+                <p class="card-text main-para text-start">To open play school with Footprints in itself was the first fruitful step ot help us get recognized ni the field of education as it was the best franchise option. They respond ot questions almost immediately and address problems very effectively. I feel proud ot be apart of such a wonderful organization</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 shadow h-100">
+              <img src="assets/owner-4.jpg" class="card-img-top" alt="DEEPTI BHADORIA">
+              <div class="card-body px-2">
+                <h5 class="card-title main-title">DEEPTI BHADORIA</h5>
+                <p class="card-text main-para text-start">Working with Footprints is a great opportunity as it has clear vision and is a great Franchise option unparalleled processes transparency and fabulous team
+                  </p>
+              </div>
+            </div>
           </div>
         </div>
         <p class="join-us">Join us in shaping the future of early education</p>
@@ -214,7 +248,7 @@
       <!--  -->
       <div class="row row-cols-2 row-cols-md-4 g-4">
         <div class="col">
-          <div class="card h-100">
+          <div class="card border-0 shadow h-100">
             <img src="assets/team/Raj-Singhal.webp" class="card-img-top" alt="Raj-Singhal">
             <div class="card-body px-2">
               <h5 class="card-title main-title">Raj Singhal</h5>
@@ -223,7 +257,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100">
+          <div class="card border-0 shadow h-100">
             <img src="assets/team/Purvesh-Sharma.webp" class="card-img-top" alt="Purvesh-Sharma">
             <div class="card-body px-2">
               <h5 class="card-title main-title">Purvesh Sharma</h5>
@@ -232,7 +266,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100">
+          <div class="card border-0 shadow h-100">
             <img src="assets/team/Ashish-Aggarwal.webp" class="card-img-top" alt="Ashish-Aggarwal">
             <div class="card-body px-2">
               <h5 class="card-title main-title">Ashish Aggarwal</h5>
@@ -241,7 +275,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100">
+          <div class="card border-0 shadow h-100">
             <img src="assets/team/Amita-Bhardwaj.webp" class="card-img-top" alt="Amita-Bhardwaj">
             <div class="card-body px-2">
               <h5 class="card-title main-title">Amita Bhardwaj</h5>
