--- a/page-1.html
+++ b/page-1.html
@@ -101,7 +101,7 @@
 <section class="py-4 text-center">
     <div class="container">
         <h2 class="title-text mb-4 text-center">What Our Franchisees Say?</h2>
-        <div class="row row-cols-2 row-cols-md-4 g-4">
+        <div class="row row-cols-2 row-cols-md-4 g-4 mb-lg-4">
           <div class="col">
             <div class="card border-0 shadow h-100">
               <img src="assets/owner-1.jpg" class="card-img-top" alt="SHAILJA ARVIND">
