FAQ & Context Change

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <div class="card h-100">
             <img src="assets/all-staff.jpg" class="icon-img-top" alt="All Women Staff">
             <div class="card-body">
-              <h3 class="card-title fs-6 fw-semibold">All Women Staff inside the center</h3>
+              <h3 class="card-title fs-6 fw-semibold">All Women Staff</h3>
             </div>
           </div>
         </div>
@@ -199,7 +199,7 @@
             <div class="card h-100">
               <img src="assets/No-entry.jpg" class="icon-img-top" alt="No-Entry">
               <div class="card-body">
-                <h3 class="card-title fs-6 fw-semibold">No-Entry without registration</h3>
+                <h3 class="card-title fs-6 fw-semibold">OTP Verified Visits</h3>
               </div>
             </div>
           </div>
