--- a/page-1.html
+++ b/page-1.html
@@ -289,11 +289,11 @@
 </section>
 
 <!--  -->
-<section>
+<section class="py-5">
   <div class="container">
       <!--  -->
       <h3 class="title-text mb-4 text-center">Our Corporate Universe</h3>
-        <div class="row justify-content-center my-2 mb-5">
+        <div class="row justify-content-center my-2">
           <div class="col-12">
               <div class="tiny-slider arrow-round">
                 <div class="tiny-slider-inner" data-arrow="false" data-autoplay="true" data-dots="false" data-gutter="10" data-items-xl="6" data-items-lg="4" data-items-md="3" data-items-sm="3" data-items-xs="3">
@@ -369,6 +369,162 @@
   </div>
 </section>
 <!--  -->
+
+<!--  -->
+<section class="pb-5">
+  <div class="container">
+    <!--  -->
+    <h3 class="title-text mb-4 text-center">FAQs</h3>
+    <div class="accordion" id="accordionFaq">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            Why you should choose Footprints Play School?
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionFaq">
+          <div class="accordion-body">
+            FootPrints Play Schools prepare children with a strong foundation for life. Footprints Daycare and Play Schools deliver the HighScope Curriculum that empowers and enables children to develop comprehensively, including Physical, Emotional, Intellectual and Social Development. The curriculum is designed to sharpen their language skills in writing, reading, speaking as well as thinking in a safe, secure and fun environment.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            What is HighScope Curriculum?
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+          <div class="accordion-body">
+            HighScope Curriculum has been scientifically developed through research and development by the HighScope Foundation based in the US.
+            <br><br>
+            Based on contemporary findings of Human Brain Development, it is observed to produce children with significantly better Health, Employment and Relationships along with much lesser criminal records. Thus, it is considered world’s most recommended and successful preschool curriculum endorsed and adopted by thousands of preschools all over US, UK, EU and Asia for not just intellectual development but character building as well.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            Does Footprints Day Care Centres Near Geetanjali Enclave in New Delhi have a structured routine?
+          </button>
+        </h2>
+        <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+          <div class="accordion-body">
+            Yes, Footprints Day Care Centres Near Geetanjali Enclave in New Delhi have a routine that is followed on a daily basis. In our centres, the staff is flexible, letting babies follow their own natural rhythms.
+            As children become older, the centres follow routines at certain times of the day and at other time
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+            What do you do at Footprints Creches Near Geetanjali Enclave in New Delhiif the child won't go to sleep?
+          </button>
+        </h2>
+        <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+          <div class="accordion-body">
+            We won't force the child to go to sleep. We will take the child with us into the sleep room and keep him/her on our laps until s/he is ready to go to sleep. Sometimes, this can take a few days before the child feels comfortable enough to sleep.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+            Do the children at Footprints Day Care Centres Near Geetanjali Enclave in New Delhi have their own beds?
+          </button>
+        </h2>
+        <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+          <div class="accordion-body">
+            Yes, they do. It is ensured that each child is provided with his/her own bed. The beds are cleaned regularly so that hygiene standards of the centre are maintained.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+            Will my baby have to change his/her routine before commencing creche?
+          </button>
+        </h2>
+        <div id="collapseSeven" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+          <div class="accordion-body">
+            No, absolutely not. We, at Footprints, will adapt to your baby’s routine. If your baby likes to sleep three times a day, we will facilitate this.
+            We will have a conversation with you before the baby joins our crèche and become familiar with the baby’s routine.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+            Does my child need to be toilet trained before starting at the Footprints Day Care Centre?
+          </button>
+        </h2>
+        <div id="collapseEight" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+          <div class="accordion-body">
+            No, we do not set a specific age or time for your child to be toilet trained. Your child should only start toilet training when he/she is ready and shows a keen interest. Our staff is fully trained to support your child when he/she is ready and trains them for all their basic needs.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+            What is the checklist to be followed at the Footprints Day Care Centres Near Geetanjali Enclave in New Delhi?
+          </button>
+        </h2>
+        <div id="collapseNine" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+          <div class="accordion-body">
+            <strong>The arrival checklist is as follows:</strong>
+            <br><br>★ Diapers, Wet wipes, Rash Cream
+            <br>★ 3 Pair of Clothes &amp; Under Garments
+            <br>★ 3 Milk Bottles, Formula Milk
+            <br>★ Sipper, Moisturizer, Towel
+            <br>★ All supplies in a Named Bag
+            <br>★ Transport: Please have child ready &amp; be there for pickup &amp; drop off on-time
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
+            How is the ‘Play Group’ Important for a Child?
+          </button>
+        </h2>
+        <div id="collapseTen" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+          <div class="accordion-body">
+            This is a crucial time to develop their social skills along with their physical, emotional and intellectual development by engaging them in group activities that stimulate learning through all senses and whole body.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
+            How is Pre Nursery Class Important?
+          </button>
+        </h2>
+        <div id="collapseEleven" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+          <div class="accordion-body">
+            PreNursery is important as it is the preparation to go to school and engage in formal education. It helps children in preparing for the school better, e.g. following a common routine, communicating in a large group, paying attention for a longer span, eating on their own, making friends, looking after their bodily needs, etc. <br><br>
+            They are introduced to basic concepts such as counting, alphabets, colours, body parts, festivals, their introduction etc.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTweleve" aria-expanded="false" aria-controls="collapseTweleve">
+            How is the LKG and UKG important?
+          </button>
+        </h2>
+        <div id="collapseTweleve" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+          <div class="accordion-body">
+            The curriculum here is designed to sharpen children’s language skills in writing, reading, speaking as well as thinking in a safe, secure and fun surroundings. The stimulating environment helps children learn things faster. 
+            <br><br>KG is the step before a child gets into formal schools, therefore it’s critical that you as a parent choose a KG school that provides the appropriate foundation that generates interest in learning and creates a base in Mathematics, Language, Social &amp; Creative skills for a smooth evolution in Learning Journey.
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--  -->
+</div>
+</section>
+<!--  -->
 <section class="footer mt-auto fixed-bottom">
         <div class="d-flex">
             <a href="#" class="btn btn-primary py-3 flex-fill text-white fw-semibold rounded-0">Enquire Now</a>
@@ -376,6 +532,9 @@
         </div>
   </section>
 <!--  -->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 
 <script src="assets/vendor/tiny-slider/tiny-slider.js"></script>
 
