--- a/page-2.html
+++ b/page-2.html
@@ -492,144 +492,158 @@
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-            Why you should choose Footprints Play School?
+            How is the Footprints Franchise model different?
           </button>
         </h2>
         <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionFaq">
           <div class="accordion-body">
-            FootPrints Play Schools prepare children with a strong foundation for life. Footprints Daycare and Play Schools deliver the HighScope Curriculum that empowers and enables children to develop comprehensively, including Physical, Emotional, Intellectual and Social Development. The curriculum is designed to sharpen their language skills in writing, reading, speaking as well as thinking in a safe, secure and fun environment.
+            The Footprints franchise model stands out as a unique and distinctive approach. Typically, the responsibility for demand generation (sales and marketing) rests with the franchise; however, Footprints takes full control of this aspect, ensuring a 100% success rate to date with zero franchise closures. <br><br>
+            Our model is truly a partnership model, as we commence royalty payments only after our partner achieves break-even, and this amount increases with every child enrolled. Additionally, we share a portion of the fees collected from books, registration amounts, and monthly app fees charged to parents with our franchisees.
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            What is HighScope Curriculum?
+            Why is Footprints following High Scope Curriculum?
           </button>
         </h2>
         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
           <div class="accordion-body">
-            HighScope Curriculum has been scientifically developed through research and development by the HighScope Foundation based in the US.
-            <br><br>
-            Based on contemporary findings of Human Brain Development, it is observed to produce children with significantly better Health, Employment and Relationships along with much lesser criminal records. Thus, it is considered world’s most recommended and successful preschool curriculum endorsed and adopted by thousands of preschools all over US, UK, EU and Asia for not just intellectual development but character building as well.
+            As research indicates, 90% of brain development occurs by the age of 6, making the choice of curriculum extremely critical for nurturing young minds. HighScope, a Michigan-based company, has been dedicated to developing early years curriculum for over 70 years. Their extensive data reveals that children who have undergone this curriculum exhibit higher employment rates, lower divorce rates, reduced crime rates, and more. Currently employed by over 50,000 preschools in 20+ countries, HighScope is a globally recognized choice. <br>
+            <br>
+            Rather than opting for a locally developed curriculum, Footprints has embraced the sole research-based curriculum, recognizing the long-term benefits it brings to the holistic development of young minds.
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-            Does Footprints Day Care Centres Near Geetanjali Enclave in New Delhi have a structured routine?
+            What kind of support will Footprints provide in hiring and training?
           </button>
         </h2>
         <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
           <div class="accordion-body">
-            Yes, Footprints Day Care Centres Near Geetanjali Enclave in New Delhi have a routine that is followed on a daily basis. In our centres, the staff is flexible, letting babies follow their own natural rhythms.
-            As children become older, the centres follow routines at certain times of the day and at other time
+            Footprints is your dedicated partner in talent acquisition and development. This encompasses the provision of candidate resumes, facilitating initial discussions with potential candidates, and aiding in the shortlisting process. Moreover, comprehensive business training is offered to both the Founder and the Centre Directress. It is noteworthy that the final approval in this process is also managed by Footprints. A comprehensive training program for teachers involves several key components, including pre-launch and post-launch.
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-            What do you do at Footprints Creches Near Geetanjali Enclave in New Delhiif the child won't go to sleep?
+            What is unique and special about Footprints as a parenting partner?
           </button>
         </h2>
         <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
           <div class="accordion-body">
-            We won't force the child to go to sleep. We will take the child with us into the sleep room and keep him/her on our laps until s/he is ready to go to sleep. Sometimes, this can take a few days before the child feels comfortable enough to sleep.
+            <ul class="text-muted ml-1">
+              <li>State-of-the-art technology features such as the Black Box, Live CCTV surveillance, mobile updates, and a user-friendly self-service portal are incorporated.</li>
+              <li>Parent policies are inspired by Amazon's customer-centric approach, offering a 15-day refund policy and a 'don't pay if not satisfied' guarantee.</li>
+              <li>Our infrastructure prioritizes child safety with features such as finger-safe equipment, soft paneling, and secure flooring. Furthermore, our commitment to safety is reflected in an all-female staff.</li>
+              <li>Experience world-class care with our exceptional adult-child ratio.</li>
+              <li>Nutritious food plays a crucial role in child development.</li>
+              <li>Customer support </li>
+              </ul>
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-            Do the children at Footprints Day Care Centres Near Geetanjali Enclave in New Delhi have their own beds?
+            What all programs does Footprints offer and their duration with age group?
           </button>
         </h2>
         <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
           <div class="accordion-body">
-            Yes, they do. It is ensured that each child is provided with his/her own bed. The beds are cleaned regularly so that hygiene standards of the centre are maintained.
+            Footprints broadly offers 3 programs- Pre-School, Day-care and After School Programs.
+            <br><br>
+            Preschool comprises of:<br><br>
+            <ul class="text-muted ml-1">
+              <li>Infants (6 Months - 1 Years)</li>
+              <li>Toddlers (1 Years — 2 Years)</li>
+              <li>Playgroup (2 Years — 3 years)</li>
+              <li>Pre-Nursery (3 Years — 4 years)</li>
+              <li>LKG (4 Years — 5 years)</li>
+              <li>UKG (5 Years — 6 years)</li>
+              <li>After School (6 Years - 8 Years)</li>
+              </ul>
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-            Will my baby have to change his/her routine before commencing creche?
+            I've heard that Footprints utilizes AI in its centers. Could you please explain how it functions?
           </button>
         </h2>
         <div id="collapseSeven" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
           <div class="accordion-body">
-            No, absolutely not. We, at Footprints, will adapt to your baby’s routine. If your baby likes to sleep three times a day, we will facilitate this.
-            We will have a conversation with you before the baby joins our crèche and become familiar with the baby’s routine.
+            As a technology-driven childcare provider, we prioritize the use of advanced tools to enhance parental engagement. We have integrated AI for primarily two purposes:
+            <br><br>
+            <ol class="text-muted ml-2">
+              <li>Analyzing video feeds to verify the presence of an adult in specific rooms, ensuring heightened control.</li>
+              <li>Optimizing the delivery of lesson plans for a more effective educational experience.</li>
+            </ol>
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-            Does my child need to be toilet trained before starting at the Footprints Day Care Centre?
+            How do Footprints ensure the Safety and Security of Children?
           </button>
         </h2>
         <div id="collapseEight" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
           <div class="accordion-body">
-            No, we do not set a specific age or time for your child to be toilet trained. Your child should only start toilet training when he/she is ready and shows a keen interest. Our staff is fully trained to support your child when he/she is ready and trains them for all their basic needs.
+            <ul class="text-muted ml-1">
+              <li>All Female Staff</li>
+              <li>CCTV Surveillance</li>
+              <li>World Class Adult-to-Child Ratio</li>
+              <li>Background and Police verification of each staff</li>
+              <li>Visitors' app to capture details of every visitor</li>
+              <li>Biometric access for restricted entry</li>
+              <li>Grade-A Infrastructure with child safe flooring and soft paneling on walls. </li>
+              </ul>
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
-            What is the checklist to be followed at the Footprints Day Care Centres Near Geetanjali Enclave in New Delhi?
+            Why is your investment too high compared to other pre-school franchise businesses?
           </button>
         </h2>
         <div id="collapseNine" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
           <div class="accordion-body">
-            <strong>The arrival checklist is as follows:</strong>
-            <br><br>★ Diapers, Wet wipes, Rash Cream
-            <br>★ 3 Pair of Clothes &amp; Under Garments
-            <br>★ 3 Milk Bottles, Formula Milk
-            <br>★ Sipper, Moisturizer, Towel
-            <br>★ All supplies in a Named Bag
-            <br>★ Transport: Please have child ready &amp; be there for pickup &amp; drop off on-time
+            Unlike most franchisors we don’t keep any hidden component of investment. We also include rental deposits to the landlord, brokerage to broker, pre launch expenses and most importantly, first year deficit, as during that time your expenses will be higher than revenue.
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
-            How is the ‘Play Group’ Important for a Child?
+            How do you ensure the admissions in the center?
           </button>
         </h2>
         <div id="collapseTen" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
           <div class="accordion-body">
-            This is a crucial time to develop their social skills along with their physical, emotional and intellectual development by engaging them in group activities that stimulate learning through all senses and whole body.
+            Footprints do the marketing for the centers. We have an in-house digital marketing team, we generate leads through online digital platforms and we have an admission support team (trained sales people) to nurture those leads and then they schedule visits to the center.
+            <br><br>
+            Along with that, we provide a written contractual guarantee of minimum 120 admissions within 2 years, failing which, we will pay compensation against each shortfall.
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
-            How is Pre Nursery Class Important?
+            What if business doesn’t perform well?
           </button>
         </h2>
         <div id="collapseEleven" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
           <div class="accordion-body">
-            PreNursery is important as it is the preparation to go to school and engage in formal education. It helps children in preparing for the school better, e.g. following a common routine, communicating in a large group, paying attention for a longer span, eating on their own, making friends, looking after their bodily needs, etc. <br><br>
-            They are introduced to basic concepts such as counting, alphabets, colours, body parts, festivals, their introduction etc.
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTweleve" aria-expanded="false" aria-controls="collapseTweleve">
-            How is the LKG and UKG important?
-          </button>
-        </h2>
-        <div id="collapseTweleve" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
-          <div class="accordion-body">
-            The curriculum here is designed to sharpen children’s language skills in writing, reading, speaking as well as thinking in a safe, secure and fun surroundings. The stimulating environment helps children learn things faster. 
-            <br><br>KG is the step before a child gets into formal schools, therefore it’s critical that you as a parent choose a KG school that provides the appropriate foundation that generates interest in learning and creates a base in Mathematics, Language, Social &amp; Creative skills for a smooth evolution in Learning Journey.
+            Risk is there in every business, but we ensure the safety of founders' investment in our franchise model.
+            Firstly, we have a dedicated team to grow your business as our profit is also associated with your centers’ performance.
+            Secondly, we provide a written contractual guarantee of 2 year buy back if you do not see the potential in our model at the end of 2nd year.
           </div>
         </div>
       </div>
