--- a/page-2.html
+++ b/page-2.html
@@ -656,7 +656,7 @@
 <section class="footer mt-auto fixed-bottom">
         <div class="d-flex">
             <a href="#" class="btn btn-primary py-3 flex-fill text-white fw-semibold rounded-0">Enquire Now</a>
-            <a href="#" class="btn btn-secondary py-3 flex-fill text-white fw-semibold rounded-0">Apply Now</a>
+            <a href="#" class="btn btn-secondary py-3 flex-fill text-white fw-semibold rounded-0">Call Us</a>
         </div>
   </section>
 <!--  -->
